--- a/templates/review/index.html.twig
+++ b/templates/review/index.html.twig
@@ -17,13 +17,10 @@
         <tbody>
         {% for review in reviews %}
             <tr>
-                <td>{{ review.id }}</td>
+                <td>{{ review.user.email }}</td>
                 <td>{{ review.rating }}</td>
                 <td>{{ review.comment }}</td>
-                <td>
-                    <a href="{{ path('review_show', {'id': review.id}) }}">show</a>
-                    <a href="{{ path('review_edit', {'id': review.id}) }}">edit</a>
-                </td>
+                <td>{{ include('review/_delete_form.html.twig') }}</td>
             </tr>
         {% else %}
             <tr>
@@ -33,5 +30,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('review_new') }}">Create new</a>
 {% endblock %}
