--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Product index{% endblock %}
 
 {% block body %}
+
+{{ include('product/_form.html.twig') }}
+
     <h1>Product index</h1>
 
     <table class="table">
@@ -10,7 +13,6 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>actions</th>
             </tr>
         </thead>
         <tbody>
@@ -18,10 +20,6 @@
             <tr>
                 <td>{{ product.id }}</td>
                 <td>{{ product.name }}</td>
-                <td>
-                    <a href="{{ path('product_show', {'id': product.id}) }}">show</a>
-                    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
-                </td>
             </tr>
         {% else %}
             <tr>
@@ -31,5 +29,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('product_new') }}">Create new</a>
+    
 {% endblock %}
