--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -32,7 +32,7 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
 
                 {% if is_granted ("ROLE_ADMIN") %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gestion des données</a>
+                        <a class="nav-link" href="{{ path('user_gestion') }}">Gestion des données</a>
                     </li>
                 {# {% else %}
                     <li class="nav-item">
